# api/swagger.yaml
@@ -12,7 +12,7 @@ info:
   license:
     name: "MIT"
     url: "http://opensource.org/licenses/MIT"
-host: "newsmaker.azurewebsites.net"
+host: "localhost:8080"
 basePath: "/api"
 schemes:
 - "http"
@@ -23,17 +23,25 @@ produces:
 paths:
   /cats:
     get:
-      description: "Returns all cats from the system that the user has access to"
-      operationId: "findCats"
+      description: "Returns all cats from the system that the user has access to matching the the query parameters"
+      operationId: "queryCats"
       produces:
       - "application/json"
       - "application/xml"
       - "text/xml"
       - "text/html"
       parameters:
-      - name: "query"
+      - name: "filter"
         in: "query"
-        description: "query to filter by"
+        description: "property values filter by"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "csv"
+      - name: "order"
+        in: "query"
+        description: "properties to sort by"
         required: false
         type: "array"
         items:
@@ -58,14 +66,14 @@ paths:
             $ref: "#/definitions/errorModel"
       x-swagger-router-controller: "cats"
     post:
-      description: "Creates a new cat."
-      operationId: "addCat"
+      description: "Create or update cats"
+      operationId: "upsertCats"
       produces:
       - "application/json"
       parameters:
       - in: "body"
         name: "cat"
-        description: "Post to add"
+        description: "Cat to add or update"
         required: true
         schema:
           $ref: "#/definitions/cat"
@@ -124,17 +132,25 @@ paths:
       x-swagger-router-controller: "cats"
   /feeds:
     get:
-      description: "Returns all feeds from the system that the user has access to"
-      operationId: "findFeeds"
+      description: "Returns all feeds from the system that the user has access to that match the query parameters"
+      operationId: "queryFeeds"
       produces:
       - "application/json"
       - "application/xml"
       - "text/xml"
       - "text/html"
       parameters:
-      - name: "query"
+      - name: "filter"
         in: "query"
-        description: "query to filter by"
+        description: "property values filter by"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+        collectionFormat: "csv"
+      - name: "order"
+        in: "query"
+        description: "properties to sort by"
         required: false
         type: "array"
         items:
@@ -157,10 +173,10 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "feeds"
     post:
-      description: "Creates a new feed."
-      operationId: "addFeed"
+      description: "Creates or updates a feed"
+      operationId: "upsertFeed"
       produces:
       - "application/json"
       parameters:
@@ -179,7 +195,7 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "feeds"
   /feeds/{id}:
     get:
       description: "Returns a feed based on a single ID, if the user does not have\
@@ -205,7 +221,7 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "feeds"
     delete:
       description: "deletes a single feed based on the ID supplied"
       operationId: "deleteFeed"
@@ -222,25 +238,27 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "feeds"
   /posts:
     get:
-      description: "Returns all posts from the system that the user has access to"
-      operationId: "findPosts"
+      description: "Returns all posts from the system that the user has access to that match t he query parameters"
+      operationId: "queryPosts"
       produces:
       - "application/json"
       - "application/xml"
       - "text/xml"
       - "text/html"
       parameters:
-      - name: "query"
+      - name: "filter"
         in: "query"
-        description: "query to filter by"
+        description: "property values to filter by"
         required: false
-        type: "array"
-        items:
-          type: "string"
-        collectionFormat: "csv"
+        type: "string"
+      - name: "order"
+        in: "query"
+        description: "properties to sort by"
+        required: false
+        type: "string"
       - name: "limit"
         in: "query"
         description: "maximum number of results to return"
@@ -258,19 +276,21 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "posts"
     post:
-      description: "Creates a new post."
-      operationId: "addPost"
+      description: "Create or update a post"
+      operationId: "upsertPost"
       produces:
       - "application/json"
       parameters:
       - in: "body"
-        name: "post"
-        description: "Post to add"
+        name: "posts"
+        description: "Posts to add or update"
         required: true
         schema:
-          $ref: "#/definitions/post"
+          type: "array"
+          items:
+            $ref: "#/definitions/post"
       responses:
         200:
           description: "post response"
@@ -280,7 +300,7 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "posts"
   /posts/{id}:
     get:
       description: "Returns a post based on a single ID, if the user does not have\
@@ -296,8 +316,7 @@ paths:
         in: "path"
         description: "ID of post to fetch"
         required: true
-        type: "integer"
-        format: "int64"
+        type: "string"
       responses:
         200:
           description: "post response"
@@ -307,7 +326,7 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "posts"
     delete:
       description: "deletes a single post based on the ID supplied"
       operationId: "deletePost"
@@ -325,7 +344,19 @@ paths:
           description: "unexpected error"
           schema:
             $ref: "#/definitions/errorModel"
-      x-swagger-router-controller: "Default"
+      x-swagger-router-controller: "posts"
+  /refreshposts:
+    get:
+      description: "triggers a refresh of the posts from their source feeds and adds any new posts"
+      operationId: "refreshPosts"
+      responses:
+        200:
+          description: "refresh of posts kicked off"
+        default:
+          description: "unexpected error"
+          schema:
+            $ref: "#/definitions/errorModel"
+      x-swagger-router-controller: "posts"
 definitions:
   cat:
     type: "object"
@@ -363,8 +394,7 @@ definitions:
     - "title"
     properties:
       id:
-        type: "integer"
-        format: "int64"
+        type: "string"
       title:
         type: "string"
       summary:
