# controllers/DefaultService.js
@@ -1,97 +1,11 @@
 'use strict';
 
-exports.addCat = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * cat (Cat)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = {
-  "catName" : "aeiou",
-  "id" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.addFeed = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * feed (Feed)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = {
-  "catID" : "aeiou",
-  "feedURL" : "aeiou",
-  "feedName" : "aeiou",
-  "feedSite" : "aeiou",
-  "id" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.addPost = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * post (Post)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = {
-  "summary" : "aeiou",
-  "date" : "aeiou",
-  "unixtime" : 123456789,
-  "catID" : "aeiou",
-  "feedID" : "aeiou",
-  "feedName" : "aeiou",
-  "author" : "aeiou",
-  "link" : "aeiou",
-  "id" : 123456789,
-  "categories" : [ "aeiou" ],
-  "title" : "aeiou"
-};
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
 exports.deleteCat = function(args, res, next) {
   /**
    * parameters expected in the args:
   * id (String)
   **/
   // no response value expected for this operation
-  
-  
   res.end();
 }
 
@@ -101,8 +15,6 @@ exports.deleteFeed = function(args, res, next) {
   * id (String)
   **/
   // no response value expected for this operation
-  
-  
   res.end();
 }
 
@@ -112,96 +24,7 @@ exports.deletePost = function(args, res, next) {
   * id (Long)
   **/
   // no response value expected for this operation
-  
-  
   res.end();
-}
-
-exports.findCats = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * query (List)
-  * limit (Integer)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = [ {
-  "catName" : "aeiou",
-  "id" : "aeiou"
-} ];
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.findFeeds = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * query (List)
-  * limit (Integer)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = [ {
-  "catID" : "aeiou",
-  "feedURL" : "aeiou",
-  "feedName" : "aeiou",
-  "feedSite" : "aeiou",
-  "id" : "aeiou"
-} ];
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
-}
-
-exports.findPosts = function(args, res, next) {
-  /**
-   * parameters expected in the args:
-  * query (List)
-  * limit (Integer)
-  **/
-  
-  
-  var examples = {};
-  examples['application/json'] = [ {
-  "summary" : "aeiou",
-  "date" : "aeiou",
-  "unixtime" : 123456789,
-  "catID" : "aeiou",
-  "feedID" : "aeiou",
-  "feedName" : "aeiou",
-  "author" : "aeiou",
-  "link" : "aeiou",
-  "id" : 123456789,
-  "categories" : [ "aeiou" ],
-  "title" : "aeiou"
-} ];
-  
-  if(Object.keys(examples).length > 0) {
-    res.setHeader('Content-Type', 'application/json');
-    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
-  }
-  else {
-    res.end();
-  }
-  
-  
 }
 
 exports.getCatByID = function(args, res, next) {
@@ -209,14 +32,11 @@ exports.getCatByID = function(args, res, next) {
    * parameters expected in the args:
   * id (String)
   **/
-  
-  
-  var examples = {};
+    var examples = {};
   examples['application/json'] = {
   "catName" : "aeiou",
   "id" : "aeiou"
 };
-  
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
@@ -224,7 +44,6 @@ exports.getCatByID = function(args, res, next) {
   else {
     res.end();
   }
-  
   
 }
 
@@ -233,9 +52,7 @@ exports.getFeedByID = function(args, res, next) {
    * parameters expected in the args:
   * id (String)
   **/
-  
-  
-  var examples = {};
+    var examples = {};
   examples['application/json'] = {
   "catID" : "aeiou",
   "feedURL" : "aeiou",
@@ -243,7 +60,6 @@ exports.getFeedByID = function(args, res, next) {
   "feedSite" : "aeiou",
   "id" : "aeiou"
 };
-  
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
@@ -252,7 +68,6 @@ exports.getFeedByID = function(args, res, next) {
     res.end();
   }
   
-  
 }
 
 exports.getPostByID = function(args, res, next) {
@@ -260,9 +75,7 @@ exports.getPostByID = function(args, res, next) {
    * parameters expected in the args:
   * id (Long)
   **/
-  
-  
-  var examples = {};
+    var examples = {};
   examples['application/json'] = {
   "summary" : "aeiou",
   "date" : "aeiou",
@@ -276,7 +89,6 @@ exports.getPostByID = function(args, res, next) {
   "categories" : [ "aeiou" ],
   "title" : "aeiou"
 };
-  
   if(Object.keys(examples).length > 0) {
     res.setHeader('Content-Type', 'application/json');
     res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
@@ -285,6 +97,160 @@ exports.getPostByID = function(args, res, next) {
     res.end();
   }
   
+}
+
+exports.queryCats = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * query (List)
+  * limit (Integer)
+  **/
+    var examples = {};
+  examples['application/json'] = [ {
+  "catName" : "aeiou",
+  "id" : "aeiou"
+} ];
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.queryFeeds = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * query (List)
+  * limit (Integer)
+  **/
+    var examples = {};
+  examples['application/json'] = [ {
+  "catID" : "aeiou",
+  "feedURL" : "aeiou",
+  "feedName" : "aeiou",
+  "feedSite" : "aeiou",
+  "id" : "aeiou"
+} ];
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.queryPosts = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * query (List)
+  * limit (Integer)
+  **/
+    var examples = {};
+  examples['application/json'] = [ {
+  "summary" : "aeiou",
+  "date" : "aeiou",
+  "unixtime" : 123456789,
+  "catID" : "aeiou",
+  "feedID" : "aeiou",
+  "feedName" : "aeiou",
+  "author" : "aeiou",
+  "link" : "aeiou",
+  "id" : 123456789,
+  "categories" : [ "aeiou" ],
+  "title" : "aeiou"
+} ];
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.refreshPosts = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  **/
+  // no response value expected for this operation
+  res.end();
+}
+
+exports.upsertCats = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * cat (Cat)
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "catName" : "aeiou",
+  "id" : "aeiou"
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.upsertFeed = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * feed (Feed)
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "catID" : "aeiou",
+  "feedURL" : "aeiou",
+  "feedName" : "aeiou",
+  "feedSite" : "aeiou",
+  "id" : "aeiou"
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.upsertPost = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * post (Post)
+  **/
+    var examples = {};
+  examples['application/json'] = {
+  "summary" : "aeiou",
+  "date" : "aeiou",
+  "unixtime" : 123456789,
+  "catID" : "aeiou",
+  "feedID" : "aeiou",
+  "feedName" : "aeiou",
+  "author" : "aeiou",
+  "link" : "aeiou",
+  "id" : 123456789,
+  "categories" : [ "aeiou" ],
+  "title" : "aeiou"
+};
+  if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
   
 }
 
